--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,20 @@ line-length = 100
 target-version = ["py312"]
 skip-magic-trailing-comma = true
 
+[tool.ruff]
+line-length = 100
+
 [tool.ruff.lint]
-select = ["E", "F"]
-ignore = ["F401"]
+# select = ["E", "F"]
+ignore = ["E741", "F401", "F403", "F405", "F722"]
+exclude = [
+    "*/_old/*.py"
+]
+
+[tool.ruff.format]
+quote-style = "single"
+# indent-style = "tab"
+docstring-code-format = true
 
 [tool.pytest.ini_options]
 addopts = "--cov mol_gnn"
