--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,11 +53,11 @@ skip-magic-trailing-comma = true
 line-length = 100
 
 [tool.ruff.lint]
-# select = ["E", "F"]
-ignore = ["E741", "F401", "F403", "F405", "F722"]
-exclude = [
-    "*/_old/*.py"
-]
+ignore = ["E741", "F403", "F405", "F722", "F821"]
+exclude = ["**/_old/*.py", "**/_*.py"]
+
+[tool.ruff.lint.extend-per-file-ignores]
+"__init__.py" = ["F401"]
 
 [tool.ruff.format]
 quote-style = "single"
