--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "mol_gnn"
 description = "Molecular GNN toolkit"
@@ -23,27 +19,46 @@ keywords = [
     "message passing neural network",
     "graph neural network"
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
-    "lightning >= 2.0",
-    "networkx",
-    "numpy",
-    "pandas",
-    "rdkit",
-    "scikit-learn",
-    "scipy",
-    "torch >= 2.1",
-    "torch_scatter"
+    "jaxtyping>=0.2.36",
+    "lightning>=2.4.0",
+    "numpy>=2.0",
+    "pandas>=2.0",
+    "rdkit>=2024.3.6",
+    "scikit-learn>=1.5.2",
+    "scipy>=1.14.1",
+    "torch-scatter",
+    "torch>=2.5.0",
 ]
 
-[project.optional-dependencies]
-dev = ["black", "bumpversion", "flake8", "pytest", "pytest-cov"]
-docs = ["sphinx", "sphinx-autobuild", "sphinx-autoapi", "sphinxcontrib-bibtex", "sphinx-book-theme"]
-test = ["parameterized > 0.8", "pytest >= 6.2", "pytest-cov"]
+[dependency-groups]
+dev = [
+    "flake8>=7.1.1",
+    "pytest>=8.3.3",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.8.0",
+]
+
+[tool.uv.sources]
+torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }
 
 [tool.black]
 line-length = 100
-target-version = ["py311"]
+target-version = ["py312"]
+
+[tool.ruff]
+line-length = 100
+
+[tool.ruff.lint]
+select = ["E", "F", "W"]
+ignore = ["E741", "F403", "F405", "F722", "F821"]
+exclude = ["**/_old/*.py", "**/_*.py"]
+
+[tool.ruff.lint.extend-per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.ruff.format]
 skip-magic-trailing-comma = true
 
 [tool.pytest.ini_options]
