--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,13 @@ dependencies = [
     "scipy>=1.14.1",
     "torch-scatter",
     "torch>=2.5.0",
+    "tensordict>=0.6.2",
 ]
 
 [dependency-groups]
 dev = [
     "flake8>=7.1.1",
+    "ipython>=8.29.0",
     "pytest>=8.3.3",
     "pytest-cov>=6.0.0",
     "ruff>=0.8.0",
