--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "flake8>=7.1.1",
+    "ipykernel>=6.29.5",
     "ipython>=8.29.0",
     "pytest>=8.3.3",
     "pytest-cov>=6.0.0",
