--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "mol_gnn"
 description = "Molecular GNN toolkit"
@@ -32,7 +36,13 @@ dependencies = [
     "torch>=2.5.0",
     "tensordict>=0.6.2",
     "torchmetrics>=1.6.0",
+    "hydra-core>=1.3.2",
+    "omegaconf>=2.3.0",
+    "click>=8.1.7",
 ]
+
+[project.scripts]
+mol-gnn = "mol_gnn.cli.main:main"
 
 [dependency-groups]
 dev = [
@@ -44,8 +54,16 @@ dev = [
     "ruff>=0.8.0",
 ]
 
+[tool.hatch.build.targets.sdist]
+exclude = [
+  "configs",
+  "notebooks",
+  "scripts"
+]
+
 [tool.uv]
 native-tls = true
+package = true
 
 [tool.uv.sources]
 torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }
