--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "flake8>=7.1.1",
     "ipykernel>=6.29.5",
     "ipython>=8.29.0",
+    "isort>=5.13.2",
     "pytest>=8.3.3",
     "pytest-cov>=6.0.0",
     "ruff>=0.8.0",
@@ -70,9 +71,10 @@ package = true
 [tool.uv.sources]
 torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }
 
-[tool.black]
-line-length = 100
-target-version = ["py312"]
+[tool.isort]
+force_sort_within_sections = true
+profile = "black"
+src_paths = ["mol_gnn"]
 
 [tool.ruff]
 line-length = 100
