--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "click>=8.1.7",
     "hydra-colorlog>=1.2.0",
     "rich>=13.9.4",
+    "h5py>=3.12.1",
 ]
 
 [project.scripts]
@@ -52,6 +53,8 @@ dev = [
     "ipykernel>=6.29.5",
     "ipython>=8.29.0",
     "isort>=5.13.2",
+    "mypy>=1.13.0",
+    "pandas-stubs>=2.2.3.241126",
     "pytest>=8.3.3",
     "pytest-cov>=6.0.0",
     "ruff>=0.8.0",
@@ -75,6 +78,9 @@ torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatte
 force_sort_within_sections = true
 profile = "black"
 src_paths = ["mol_gnn"]
+
+[tool.mypy]
+exclude = ["_old", ".*/_.*.py"]
 
 [tool.ruff]
 line-length = 100
