--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dependencies = [
 ]
 
 [project.scripts]
-mol_gnn-train = "mol_gnn.cli.train:train"
+notorch-train = "notorch.cli.train:train"
 
 [dependency-groups]
 dev = [
@@ -77,7 +77,7 @@ torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatte
 [tool.isort]
 force_sort_within_sections = true
 profile = "black"
-src_paths = ["mol_gnn"]
+src_paths = ["notorch"]
 
 [tool.mypy]
 exclude = ["_old", ".*/_.*.py"]
