--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "hydra-colorlog>=1.2.0",
     "rich>=13.9.4",
     "h5py>=3.12.1",
+    "tensorboard>=2.18.0",
 ]
 
 [project.scripts]
