--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "rich>=13.9.4",
     "h5py>=3.12.1",
     "tensorboard>=2.18.0",
+    "torch-cluster>=1.6.3",
 ]
 
 [project.scripts]
@@ -74,6 +75,7 @@ package = true
 
 [tool.uv.sources]
 torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }
+torch-cluster = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_cluster-1.6.3-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }
 
 [tool.isort]
 force_sort_within_sections = true
