--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
     "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
     "torch-scatter",
-    "torch>=2.5.0",
+    "torch==2.5.*",
     "tensordict>=0.6.2",
     "torchmetrics>=1.6.0",
     "hydra-core>=1.3.2",
@@ -55,6 +55,7 @@ dev = [
     "ipykernel>=6.29.5",
     "ipython>=8.29.0",
     "isort>=5.13.2",
+    "matplotlib>=3.10.0",
     "mypy>=1.13.0",
     "pandas-stubs>=2.2.3.241126",
     "pytest>=8.3.3",
